# Cliente-Servidor-pytorch

./: README.md  pyproject.toml  requirements.txt
cifar10/: ddp.py  load_data.py  local.py  model.py  ray.py  save.py
cifar10/ddp/: load_sampler.py  model.py  train.py
cifar10/local/: load_data.py  main.py  model.py  train.py
evaluates/: __init__.py  classification.py
mnist/: ddp.py  load_data.py  local.py
mnist/ddp/: load_sampler.py  model.py  train.py
mnist/local/: load_data.py  main.py  model.py  train.py
trainers/: __init__.py  grad_norm.py  train_ddp_grad_avarage.py  train_grad_average.py
utils/: __init__.py  plots.py
